# Crucible

./: .gitignore  Cargo.toml  README.md  image.ppm  test.json
.github/workflows/: rust.yml
benches/: renderer_benchmark.rs
src/: asset_loader.rs  camera.rs  demo_images.rs  demo_movies.rs  demo_scenes.rs  environment.rs  lib.rs  main.rs  material.rs  math_tools.rs  objects.rs  scene.rs  texture.rs  timeline.rs  util.rs  utils.rs
src/asset_loader/: img_loader.rs  mod.rs  obj_loader.rs
src/camera/: cpu_threading.rs  miscellaneous.rs  mod.rs  ray_casting.rs  rendering_compute.rs
src/demo_builder/: demo_images.rs  demo_movies.rs  mod.rs
src/materials/: dielectric.rs  lambertian.rs  metal.rs  mod.rs
src/objects/: bvh.rs  bvhwrapper.rs  hitlist.rs  mod.rs  sphere.rs  triangle.rs
src/scene/: id_vendor.rs  mod.rs  movie_maker.rs  scene_animator.rs
src/textures/: checker_texture.rs  image_texture.rs  mod.rs  solid_color.rs
src/timeline/: helper_functions.rs  matrix_builder.rs  mod.rs  transform_builder.rs
