[package]
name = "ray_tracing"
version = "0.2.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
dashmap = "6.1.0"
indicatif = "0.18.0"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive", "rc"] }
strum = "0.27.2"
strum_macros = "0.27.2"

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "renderer_benchmark"
harness = false
