[package]
name = "ray_tracing"
version = "0.2.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.46", features = ["derive"] }
dashmap = "6.1.0"
image = "0.25.6"
indicatif = "0.18.0"
nalgebra = "0.34.0"
rand = "0.9.2"
strum = "0.27.2"
strum_macros = "0.27.2"

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "renderer_benchmark"
harness = false
